--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@
 set( srcs "mcp342x.c" )
 set( include_dirs "." )
 set( priv_include_dirs )
-set( requires "endpoints hal_esp32" )
-set( priv_requires "commands printfx rules syslog systiming" )
+set( requires )
+set( priv_requires )
 
 idf_component_register(
 	SRCS ${srcs}
