--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 set( srcs "mcp342x.c" )
 set( include_dirs "." )
 set( priv_include_dirs )
-set( requires )
+set( requires "main" )
 set( priv_requires )
 
 idf_component_register(
